test/Fail/Sections-11.agda
open import Common.Prelude

_test_ : Nat → Nat → Nat
_test n = _+ n
